--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.7.5",
+    "framer-motion": "^12.6.3",
     "next": "15.2.4",
     "puppeteer": "^24.5.0",
     "react": "^19.0.0",
